tests/baselines/reference/noImplicitAnyInBareInterface.errors.txt
tests/cases/compiler/noImplicitAnyInBareInterface.ts(3,5): error TS7013: Construct signature, which lacks return-type annotation, implicitly has an 'any' return type.
tests/cases/compiler/noImplicitAnyInBareInterface.ts(5,5): error TS7010: 'foo', which lacks return-type annotation, implicitly has an 'any' return type.


==== tests/cases/compiler/noImplicitAnyInBareInterface.ts (2 errors) ====
    interface Entry {
        // Should return error for implicit any on `new` and `foo`.
        new ();
        ~~~~~~~
!!! error TS7013: Construct signature, which lacks return-type annotation, implicitly has an 'any' return type.
        few() : any;
        foo();
        ~~~~~~
!!! error TS7010: 'foo', which lacks return-type annotation, implicitly has an 'any' return type.
    }